# cinventory

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-prod.txt  setup.cfg
src/cinventory_pyrdo/: cli.py
src/cinventory_pyrdo/computer/: virtual.py
tests/: config  test_command.py  test_main.py  test_service.py  test_virtual.py
