[project]
name = "cinventory_pyrdo"
version = "1.0.6"
authors = [
  { name="bakduo"},
]

description = "cinventory_pyrdo package"

readme = "README.rst"

requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Operating System",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities"
]

keywords = ['inventory']

dependencies = ['distro>=1.6.0', 'requests']

[project.urls]
Homepage = "https://github.com/bakduo/cinventory"
Issues = "https://github.com/bakduo/cinventory/issues"
[build-system]
requires = ["setuptools", "wheel"]  # PEP 508 specifications.