[project]
name = "cinventory_pyrdo"
version = "1.0.7"
authors = [
  { name="bakduo"},
]

description = "cinventory_pyrdo package permite read packages and variable os and send it remote server or show in format json."

readme = "README.rst"

requires-python = ">=3.8"

license = {file = "LICENSE"}

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Operating System",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities"
]

keywords = ['inventory']

dependencies = ['distro>=1.6.0', 'requests']

[project.scripts]
cinventory_pyrdo-cli = "cinventory_pyrdo:cli"

[project.urls]
Homepage = "https://github.com/bakduo/cinventory"
Issues = "https://github.com/bakduo/cinventory/issues"