[flake8]
max-line-length = 88
exclude =venv

[project]
name = cinventory_pyrdo
license = {text = "MIT"}

[metadata]
name = cinventory_pyrdo
author = bakduo
version = attr: cinventory_pyrdo.VERSION
description = cinventory_pyrdo package
long_description = file: README.md, CHANGES.md, LICENSE
keywords = inventory
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages=find_namespace:

python_requires = >=3.8

install_requires =
    psutil==6.0.0
    distro==1.9.0
    requests==2.32.3

[options.packages.find]
where = src