[flake8]
max-line-length = 88
exclude =venv

[project]
name = cinventory_pyrdo
license = {text = "MIT"}
[project.urls]
Homepage = "https://github.com/bakduo/cinventory"
Issues = "https://github.com/bakduo/cinventory/issues"

[metadata]
name = cinventory_pyrdo
author = bakduo
version = attr: cinventory_pyrdo.VERSION
description = cinventory_pyrdo package
long_description = file: README.rst, CHANGES.rst, LICENSE
long_description_content_type = text/x-rst
keywords = inventory
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Topic :: System :: Operating System
    Topic :: System :: Systems Administration
    Topic :: Utilities
[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages=find_namespace:

python_requires = >=3.8

install_requires =
    distro>=1.6.0
    requests

[options.packages.find]
where = src